[Misc] Prevent SonarQube to raise an error for the code in comment + fix warnings